--- a/vanillaApp.html
+++ b/vanillaApp.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather App</title>
+    <title>Vanilla Weather App</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -80,15 +80,15 @@
             <p id="wind">Wind: 7.2 km/h</p>
         </div>
         <footer>
-            <p>This project was coded by <a href="https://github.com/MattDelac" target="_blank">Matt Delac</a> and is 
-                <a href="https://github.com/YourGitHubRepo" target="_blank">on GitHub</a> 
+            <p>This project was coded by <a href="" target="_blank">M khumalo</a> and is 
+                <a href="https://github.com/MKHUMALO" target="_blank">on GitHub</a> 
                 and 
                 <a href="https://netlify.app" target="_blank">hosted on Netlify</a>.
             </p>
         </footer>
     </div>
     <script>
-        const apiKey = 'YOUR_API_KEY';
+        const apiKey = 'eb527cfd73236f56693268da8f697af4';
 
         function getWeather() {
             const city = document.getElementById('cityInput').value || 'Paris';
