--- a/vanillaApp.html
+++ b/vanillaApp.html
@@ -80,8 +80,8 @@
             <p id="wind">Wind: 7.2 km/h</p>
         </div>
         <footer>
-            <p>This project was coded by <a href="" target="_blank">M khumalo</a> and is 
-                <a href="https://github.com/MKHUMALO" target="_blank">on GitHub</a> 
+            <p>This project was coded by <a href="https://github.com/dashboard" target="_blank">M khumalo</a> and is 
+                <a href="https://app.netlify.com/teams/mkhumalo/sites" target="_blank">on GitHub</a> 
                 and 
                 <a href="https://netlify.app" target="_blank">hosted on Netlify</a>.
             </p>
